# graphql-backend

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json
demo/: Cargo.toml
demo/migrations/2023-10-26-125543_create_notes/: down.sql  up.sql
demo/src/: main.rs  schema.rs
demo/src/repository/: mod.rs
demo/src/repository/dynamo/: mod.rs
demo/src/repository/notes/entities/: mod.rs
demo/src/repository/notes/repository/: mod.rs
demo/src/repository/notes/service/: mod.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/notes/: index.ts
frontend/src/helpers/: auto-resize-textarea.tsx
frontend/src/pages/all-notes/: index.tsx
frontend/src/pages/all-notes/create-note/: create-note.tsx
frontend/src/pages/all-notes/edit-note/: edit-note.tsx
frontend/src/pages/all-notes/note/: index.tsx
frontend/src/pages/all-notes/note-preview/: index.tsx
frontend/src/pages/all-notes/search/: index.tsx
frontend/src/pages/note/: index.tsx
orm/: Cargo.toml
orm/src/: lib.rs
orm/src/repository/: entity.rs  mod.rs  repository.rs
orm/src/server/: mod.rs
orm/src/service/: mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/ai/: mod.rs
server/src/ai/routes/: mod.rs
server/src/ai/service/: chatgpt.rs  encoder.rs  mod.rs  weaviate.rs
server/src/helpers/: mod.rs
server/src/notes/: mod.rs
server/src/notes/entities/: mod.rs
server/src/notes/models/: mod.rs
server/src/notes/repository/: mod.rs
server/src/notes/routes/: mod.rs
server/src/notes/service/: mod.rs
