[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.31", features = [] }
orm = { path = "../orm" }
actix-web = "4"
async-graphql = "6.0.11"
http = "0.2.9"
async-graphql-warp = "6.0.11"
warp = "0.3.6"
