[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
chrono = { version = "0.4.31", features = [] }
orm = { path = "../orm" }
actix-web = "4"
aws-sdk-dynamodb = "1.16.0"
serde_dynamo = "4.2.13"
aws-config = { version= "1.1.7", features = ["behavior-version-latest"] }
serde = { version = "1.0.197", features = ["derive"] }
