[package]
name = "orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
juniper = "0.15.11"
async-trait = "0.1.74"
aws-sdk-dynamodb = "1.16.0"
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde = "1.0.197"
thiserror = "1.0.58"
actix-web = "4"
