[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
chrono = { version = "0.4.31", features = [] }
orm = { path = "../orm" }
actix-web = "4"
aws-sdk-dynamodb = "1.16.0"
serde_dynamo = "4.2.13"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
serde = { version = "1.0.197", features = ["derive"] }
apistos = { version = "0.1.7", features = ["extras", "qs_query"] }
schemars = { package = "apistos-schemars", version = "0.8" }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
